GNOME Bugzilla – Bug 761338
Bijiben often crashes at startup
Last modified: 2017-12-25 01:11:54 UTC
On Fedora 23 (Gnome 3.18.2) Bijiben often (but not always) crashes at startup. Here is the console output: ** (bijiben:2640): WARNING **: Enumerator failed : No such file or directory (bijiben:2640): GLib-GIO-CRITICAL **: g_file_enumerator_close_async: assertion 'G_IS_FILE_ENUMERATOR (enumerator)' failed ** (bijiben:2640): WARNING **: Enumerator failed : No such file or directory (bijiben:2640): GLib-GIO-CRITICAL **: g_file_enumerator_close_async: assertion 'G_IS_FILE_ENUMERATOR (enumerator)' failed sending the mass change [xcb] Unknown sequence number while processing queue [xcb] Most likely this is a multi-threaded client and XInitThreads has not been called [xcb] Aborting, sorry about that. bijiben: xcb_io.c:274: poll_for_event: Assertion `!xcb_xlib_threads_sequence_lost' failed. Aborted (core dumped)
Created attachment 358963 [details] Bijiben strace I'm not sure if this is related to the same problem, but I've just installed it in a fresh new Fedora 26 install. Yesterday I created a new note and today I was not able to open it. Actually it doesn't even start, so I'm adding more information so we can try to find out what's going on.
Created attachment 358964 [details] Bijiben backtrace This is output of gdb bt.
*** Bug 770223 has been marked as a duplicate of this bug. ***
Just to make it clean, this problems happen when using Xorg, not Wayland.
I think the issue is in _get_icon() in biji-memo-provider.c. Specifically the line: embed = gd_embed_image_in_frame (pix, "resource:///org/gnome/bijiben/thumbnail-frame.png", &frame_slice, &frame_slice); commenting the following (line 496) resolves the issue: if (!_get_icon (self, &self->info.icon)) I believe that this is because the function gd_embed_image_in_frame() is supposed to be run in UI thread, but may be it's not. May be a g_idle_add() might resolve the issue.
Created attachment 365841 [details] [review] application: Import notes only when manager is ready The notes from tomboy and gnote where being imported before the manager was ready. As this is not possible, the user was welcome with a segfault instead. So, import the notes only after the manager is ready, and test for the import paths before importing.
Created attachment 365843 [details] [review] memo-provider: Don't add custom border to pixbuf Adding a custom border with the pixbuf doesn't make any difference. Also, by removing this, we can remove a further dependency on libgd. This was also causing a segfault as some display related code was being run by libgd in the non-UI thread. This commit avoids the custom border along with removing the related libgd code, and saving from a crash
Review of attachment 365843 [details] [review]: Awesome, it fixed all my X11 issues, like: [xcb] Unknown sequence number while processing queue [xcb] Most likely this is a multi-threaded client and XInitThreads has not been called [xcb] Aborting, sorry about that. bijiben: xcb_io.c:259: poll_for_event: Assertion `!xcb_xlib_threads_sequence_lost' failed. Aborted (imagem do núcleo gravada) and Gdk-Message: bijiben: Fatal IO error 11 (Resource temporarily unavailable) on X server :1. It also speeded up startup time. Thanks man!
I consider this bug closed, if this problem repeats, please re-open it. Thx.
*** Bug 767572 has been marked as a duplicate of this bug. ***
*** Bug 767571 has been marked as a duplicate of this bug. ***
*** Bug 767568 has been marked as a duplicate of this bug. ***